fix: update hover color for links in Topbar for improved visibility

--- a/src/components/Topbar/Topbar.module.css
+++ b/src/components/Topbar/Topbar.module.css
@@ -2,6 +2,10 @@
   font-size: 0.8rem;
 }
 
+header a:hover {
+  color: var(--color-wood);
+}
+
 .FaPhone {
   transform: scaleX(-1);
 }
