--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,8 +9,7 @@
   --color-text: #e0e7eb;
   --color-metal-gray: #a4b4be;
   --color-darker-gray: #466076;
-  --color-wood: #a44515;
-  --color-dark-wood: #723825;
+  --color-wood: #c86a2c;
 }
 
 * {
